@@ -66,7 +66,12 @@ which scares away people.
 
 @end ignore
 
+
+@item 
+
 @end itemize
+
+
 
 @ifhtml
 For older news, go to
