@@ -1,5 +1,7 @@
 2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* input/regression/tie-arpeggio-collision.ly: new file.
+
 	* lily/tie-formatting-problem.cc (set_column_chord_outline): new
 	function: store outlines per column rank.
 
